[WO-204] fix word wrapping

--- a/src/sass/views/_read.scss
+++ b/src/sass/views/_read.scss
@@ -51,8 +51,12 @@
         height: 100%;
         overflow-y: scroll;
 
-        .empty-line {
-            line-height: 1em;
+        div {
+            word-wrap: break-word;
+
+            &.empty-line {
+                line-height: 1em;
+            }
         }
     }
 
